tests/valid/definite/Subtype_Valid_4.whiley
define {int} where |$| > 0 as sr4set

void System::main([string] args):
    sr4set x = {1}
    print str(x)
    
